# incubator-teaclave-trustzone-sdk

ternoa/host/: Cargo.toml  ternoa_metadata.scale
ternoa/host/src/: main.rs  rpc.rs  ternoa_types.rs
ternoa/ta/: Cargo.toml
