[package]
name = "ternoa-host"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

[dependencies]
libc = "0.2.48"
proto = { path = "../proto" }
optee-teec = { path = "../../optee-teec" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = { git = "https://github.com/paritytech/subxt" }
serde = { version = "1.0.130", features = ["derive"] }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate/", branch = "master" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }

[profile.release]
lto = true
